Introduce Camel and receive a list of events

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jmx.default-domain=notifications
 
 server.port=2003
 
-spring.datasource.url=jdbc:postgresql://portal-notifications-db:5432/portal-notifications
+spring.datasource.url=jdbc:postgresql://@database-host@:@database-port@/portal-notifications
 spring.datasource.username=portal-notifications
 spring.datasource.password=test123
 spring.jpa.show-sql=true
