--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
 
     <!-- default parameters used in the application. Override these with a Maven profile -->
     <environment>dev</environment>
+    <database-host>localhost</database-host>
+    <database-port>5434</database-port>
 
     <!-- versions of dependencies -->
     <java.version>1.8</java.version>
@@ -44,10 +46,24 @@
         <scope>import</scope>
         <type>pom</type>
       </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-spring-boot-dependencies</artifactId>
+        <version>2.20.2</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
   <dependencies>
+
+    <dependency>
+      <groupId>be.stijnhooft</groupId>
+      <artifactId>portal-model</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+
     <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
@@ -134,6 +150,29 @@
       <scope>test</scope>
     </dependency>
 
+
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jackson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jms</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-pool</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-camel</artifactId>
+    </dependency>
+
+
   </dependencies>
 
   <build>
@@ -199,6 +238,8 @@
       <id>production</id>
       <properties>
         <environment>production</environment>
+        <database-host>portal-notifications-db</database-host>
+        <database-port>5432</database-port>
       </properties>
       <build>
         <plugins>
