--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
     </dependency>
 
     <dependency>
+      <groupId>be.stijnhooft</groupId>
+      <artifactId>portal-notifications-model</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
       <version>7.0</version>
@@ -172,7 +178,10 @@
       <artifactId>activemq-camel</artifactId>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -180,12 +189,6 @@
       <resource>
         <directory>${basedir}/src/main/resources</directory>
         <filtering>true</filtering>
-        <includes>
-          <include>**/application.yml</include>
-          <include>**/application.properties</include>
-          <include>**/bootstrap.yml</include>
-          <include>**/bootstrap.properties</include>
-        </includes>
       </resource>
       <resource>
         <directory>${basedir}/src/main/public</directory>
