--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,12 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+spring.rabbitmq.host=@rabbitmq-host@
+spring.rabbitmq.port=@rabbitmq-port@
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.cloud.stream.bindings.eventTopic.destination=eventTopic
 spring.cloud.stream.bindings.notificationTopic.destination=notificationTopic
 spring.cloud.stream.default.contentType=application/json
+
+eureka.client.service-url.defaultZone=@eureka.server.uri@/eureka
