When the action button is clicked, the notification is marked as read and the user is forwarded to the right url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.cloud.stream.bindings.notificationTopic.destination=notificationTopic
 spring.cloud.stream.default.contentType=application/json
 
 eureka.client.service-url.defaultZone=@eureka.server.uri@/eureka
+
+#https://github.com/pgjdbc/pgjdbc/issues/1102
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
