--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,7 @@
-spring.application.name=portal-notifications
+spring.application.name=notifications
 spring.profiles.active=@environment@
+
+spring.cloud.config.uri=@config.server.uri@
+spring.cloud.config.fail-fast=true
+spring.cloud.config.retry.max-attempts=10
+spring.cloud.config.retry.initial-interval=10000
