--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <rabbitmq-host>localhost</rabbitmq-host>
         <rabbitmq-port>5672</rabbitmq-port>
         <eureka.server.uri>http://localhost:8761</eureka.server.uri>
+        <config.server.uri>http://localhost:2000</config.server.uri>
 
         <!-- versions of dependencies -->
         <java.version>1.8</java.version>
@@ -61,7 +62,6 @@
     </dependencyManagement>
 
     <dependencies>
-
         <dependency>
             <groupId>be.stijnhooft</groupId>
             <artifactId>portal-model</artifactId>
@@ -121,6 +121,32 @@
             <artifactId>lombok</artifactId>
             <version>1.16.16</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+            <version>2.0.0.M7</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>1.2.2.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
 
         <!-- support for Java 8 datetime types -->
         <dependency>
@@ -142,36 +168,22 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <scope>test</scope>
-        </dependency>
-
         <dependency>
             <groupId>com.github.springtestdbunit</groupId>
             <artifactId>spring-test-dbunit</artifactId>
             <version>1.3.0</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
             <version>2.5.4</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
-            <version>2.0.0.M7</version>
-            <scope>compile</scope>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -209,6 +221,15 @@
                         </configuration>
                     </execution>
                     <execution>
+                        <id>npm test</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run test-once</arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>npm build</id>
                         <goals>
                             <goal>npm</goal>
@@ -238,6 +259,7 @@
                 <rabbitmq-host>portal-rabbitmq</rabbitmq-host>
                 <rabbitmq-port>5672</rabbitmq-port>
                 <eureka.server.uri>http://portal-eureka:8761</eureka.server.uri>
+                <config.server.uri>http://portal-config:2000</config.server.uri>
             </properties>
             <build>
                 <plugins>
