--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,32 @@
         modules via JMS, and turns them into emails, push notifications, ... With the
         front-end, it's possible to manage these notifications.
     </description>
+    <url>http://portal.stijnhooft.be/</url>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>Stijn Hooft</name>
+            <organizationUrl>http://www.stijnhooft.be</organizationUrl>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git:git://github.com/stainii/portal-notifications.git</connection>
+        <developerConnection>scm:git:ssh://github.com:stainii/portal-notifications.git</developerConnection>
+        <url>http://github.com/stainii/portal-notifications/tree/master</url>
+    </scm>
+    <issueManagement>
+        <system>Trello</system>
+        <url>https://trello.com/b/LlzGuRM3/portal</url>
+    </issueManagement>
+    <ciManagement>
+        <system>Jenkins</system>
+        <url>http://portal-ci.westeurope.cloudapp.azure.com/</url>
+    </ciManagement>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
