update version of portal-notifications-model and portal-model to 1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -91,13 +91,13 @@
         <dependency>
             <groupId>be.stijnhooft</groupId>
             <artifactId>portal-model</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
             <groupId>be.stijnhooft</groupId>
             <artifactId>portal-notifications-model</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
