add repository to pom

--- a/pom.xml
+++ b/pom.xml
@@ -405,6 +405,10 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>portal-ci-nexus-releases</id>
+            <url>http://portal-ci.westeurope.cloudapp.azure.com:8081/repository/maven-releases/</url>
+        </repository>
     </repositories>
 
     <distributionManagement>
