--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.config.json",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "test-once": "ng test --watch=false",
     "lint": "ng lint",
