discover the config server over Eureka, instead of hardcoding the address of the config server itself

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -5,3 +5,9 @@ spring.cloud.config.uri=@config.server.uri@
 spring.cloud.config.fail-fast=true
 spring.cloud.config.retry.max-attempts=10
 spring.cloud.config.retry.initial-interval=10000
+
+eureka.client.service-url.defaultZone=@eureka.server.uri@/eureka
+eureka.instance.prefer-ip-address=true
+
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.service-id=portal-config
