--- a/src/test/resources/bootstrap-local.properties
+++ b/src/test/resources/bootstrap-local.properties
@@ -1,3 +1,7 @@
 # mock spring cloud config
 spring.cloud.config.enabled=false
+spring.cloud.config.discovery.enabled=false
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
 url=http://this.should.be.fetched.from.config/
