Support Docker Swarm

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -6,7 +6,10 @@ spring.cloud.config.retry.max-attempts=10
 spring.cloud.config.retry.initial-interval=10000
 
 eureka.client.service-url.defaultZone=@eureka.server.uri@/eureka
-eureka.instance.prefer-ip-address=true
+
+#TODO: override hostname with spring properties
+eureka.instance.hostname=portal-notifications-app
+eureka.instance.prefer-ip-address=false
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=portal-config
