--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
+        <version>2.1.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -60,10 +60,8 @@
         <eureka.server.uri>http://localhost:8761</eureka.server.uri>
 
         <!-- versions of dependencies -->
-        <java.version>1.8</java.version>
-        <javaee.api.version>7.0</javaee.api.version>
+        <java.version>11</java.version>
         <maven.war.plugin.version>3.0.0</maven.war.plugin.version>
-        <frontend.maven.plugin.version>1.4</frontend.maven.plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -78,7 +76,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Finchley.RELEASE</version>
+                <version>Greenwich.M3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -143,7 +141,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.16</version>
+            <version>1.18.4</version>
         </dependency>
         <dependency>
             <groupId>org.liquibase</groupId>
@@ -186,10 +184,24 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
-        <!-- build when using jdk 9+ -->
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+        </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
             <version>2.3.0</version>
         </dependency>
 
@@ -253,7 +265,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -266,7 +277,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -298,7 +308,7 @@
                         <version>1.4.8</version>
                         <executions>
                             <execution>
-                                <phase>install</phase>
+                                <id>default</id>
                                 <goals>
                                     <goal>build</goal>
                                     <goal>push</goal>
@@ -345,7 +355,7 @@
         <repository>
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
-            <url>https://repo.spring.io/libs-milestone</url>
+            <url>https://repo.spring.io/milestone</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -354,6 +364,10 @@
             <id>portal-ci-nexus-releases</id>
             <url>http://portal-ci.westeurope.cloudapp.azure.com:8081/repository/maven-releases/</url>
         </repository>
+        <repository>
+            <id>portal-ci-nexus-snapshots</id>
+            <url>http://portal-ci.westeurope.cloudapp.azure.com:8081/repository/maven-snapshots/</url>
+        </repository>
     </repositories>
 
     <distributionManagement>
@@ -361,6 +375,10 @@
             <id>portal-ci-nexus-releases</id>
             <url>http://portal-ci.westeurope.cloudapp.azure.com:8081/repository/maven-releases/</url>
         </repository>
+        <snapshotRepository>
+            <id>portal-ci-nexus-snapshots</id>
+            <url>http://portal-ci.westeurope.cloudapp.azure.com:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
     </distributionManagement>
 
 </project>
