remove use of spring cloud config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,6 @@ spring.datasource.password=test123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 spring.rabbitmq.host=@rabbitmq-host@
 spring.rabbitmq.port=@rabbitmq-port@
@@ -21,3 +20,5 @@ spring.cloud.stream.default.contentType=application/json
 
 #https://github.com/pgjdbc/pgjdbc/issues/1102
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+baseUrl=https://please_overwrite/
