--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 spring.application.name=notifications
 spring.profiles.active=@environment@
 
-eureka.client.service-url.defaultZone=@eureka.server.uri@/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 #TODO: override hostname with spring properties
 eureka.instance.hostname=portal-notifications-app
