--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>be.stijnhooft</groupId>
             <artifactId>portal-notifications-model</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
 
         <dependency>
